# zero_password_manager

./: .gitignore  CHANGELOG.md  FEATURES.md  README.md  create_demo_gif.py  create_ui_demo_gif.py  debug_db.py  demo_script.py  docker-compose.yml  example.env  index.html  migrate_all_dbs.py  pubspec.yaml  pytest.ini
.github/workflows/: ci.yml  release-apk.yml
android/app/: CMakeCache.txt  CMakeLists.txt  build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: securewipe.cpp
android/app/src/main/kotlin/com/example/nk3_zero/: MainActivity.kt  WipeString.kt
android/app/src/main/res/values/: styles.xml
android/app/src/main/res/xml/: network_security_config.xml
docs/: CORE.md  FEATURES.md
lib/: custom_input.dart  main.dart  password_card.dart  primary_button.dart
lib/config/: app_config.dart
lib/models/: server_error.dart
lib/screens/: add_password_screen.dart  biometric_test_screen.dart  edit_password_screen.dart  emergency_screen.dart  folders_screen.dart  login_screen.dart  password_detail_screen.dart  password_history_screen.dart  passwords_screen.dart  pin_screen.dart  reset_password_screen.dart  settings_screen.dart  setup_pin_screen.dart  setup_server_screen.dart  sharing_screen.dart  signup_screen.dart  splash_screen.dart  telegram_binding_screen.dart  totp_confirm_screen.dart
lib/services/: auth_token_storage.dart  ws_service.dart  (+3 more)
server/: .env.example  Dockerfile  auth.py  config.py  crud.py  database.py  main.py  middleware.py  models.py  requirements.txt  schemas.py  security.py  utils.py
(+28 files in other folders)
